// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

04/12/2010
	r323 [pakpil]
	* Fixed SC_AUTOSHADOWSPELL cast time. Bug report 379.
	* Fixed some isequipped() checks on item_db.txt.
	* Fixed exp table in exp.txt.
	- 3rd job have been moved to hadle these by separate.
	* Fixed LG_REFLECTDAMAGE that shouldn't reduce damage received.

04/09/2010
	r318 [pakpil]
	* Fixed SO_STRIKING. Follow up r317.

	r317 [pakpil]
	* Fixed SO_STRIKING. Bug report 277.

	r316 [pakpil]
	* Fixed a type in LG_SHIELDPRESS stun duration. Bug report 357.

04/08/2010
	r315 [Jobbie]
	* Fixed Vacuum Extreme missing duration resistance. Bug Report 360.
	- This skill now uses its own SC_* and SI_* to adopt official behavior.

	r313 [Jobbie]
	* Added GN_MANDRAGORA skill.

	r312 [pakpil]
	* Fixed WM_GLOOMYDAY. Added missing skill data.
	* Fixed LG_REFLECTDAMAGE area effect. Follow up r304.
	* Fixed GN_THORNSTRAP.
	- Fixed its unit layout.
	- Fixed behavior using clif_changetraplook instead skill_unitsetting.

04/07/2010
	r311 [Jobbie]
	* Fix minor bug in battle.c

	r309 [Rytech]
	*Added tags and place holders for elemental spirits skills.

	r308 [pakpil]
	* Fixed LG_SHIELDPRESS.
	- Applied missing effects from Gloomy Day skill.


	r307 [Jobbie]
	* Adoramus Update adjusted to official behavior.
	- Uses now its own SC_* and SI_* regardless to its blind status effect.

04/06/2010
	r306 [Jobbie]
	- Minor fix to WL_RELEASE skill when releasing ball. Removed displaying "Unknown-Skill"
	- Minor fix to NC_SELFDESTRUCT not checking in inventory to Self destruct item.
	- Fix a typo in status.h
	
	r305 [pakpil]
	*Added LG_PRESTIGE and LG_SHIELDPRESS skills.
	*Minor fix in LG_PIETY where its casting should be interrupted when the caster get damage.
	*Fixed bug report 346.

04/05/2010
	r304 [pakpil]
	*Added LG_PIETY skill.
	*Fixed bug report 317.

	r302 [pakpil]
	*Fixed bug report 335.
	*Fixed bug report 337.

03/30/2010